# everything-backend-starter-kit

./: .env.example  .gitignore  .secrets.baseline  BUILD.bazel  Dockerfile  MODULE.bazel  README.md  Taskfile.yaml  WORKSPACE.bazel  docker-compose.yml  go.mod  go.sum
.githooks/: pre-commit  pre-push
.github/workflows/: ci.yml  fuzz-nightly.yml  k8s-kind-smoke.yml
api/: everything-backend-starter-kit.rest  openapi.yaml
cmd/api/: BUILD.bazel  README.md  main.go
cmd/loadgen/: BUILD.bazel  main.go
cmd/migrate/: BUILD.bazel  README.md  main.go
cmd/obscheck/: BUILD.bazel  main.go
cmd/seed/: BUILD.bazel  main.go
configs/: otel-collector-config.yaml
docs/: audit-taxonomy.md  diagrams.md  grafana-jsonnet-cutover-plan.md  grafana-jsonnet.md  k8s-adoption-plan.md  k8s-rollout-governance.md  metrics-catalog.md  project-guide.md  test-catalog.md  test-gaps.md  test_catalog.md
docs/diagrams/: admin-list-cache-flow.mmd  api-rate-limiter-key-flow.mmd  ci-flow.mmd  email-verification-flow.mmd  forgot-rate-limiter-flow.mmd  idempotency-flow.mmd  k8s-overlay-topology.mmd  k8s-runtime-rollout-smoke-flow.mmd  rbac-admin-flow.mmd  route-rate-limit-policy-map-flow.mmd
internal/app/: BUILD.bazel  app.go  app_test.go
internal/config/: BUILD.bazel  config.go  config_profile_test.go  metrics.go
internal/database/: BUILD.bazel  migrate.go  migrate_test.go  postgres.go  postgres_test.go  seed.go  seed_test.go
internal/di/: BUILD.bazel  providers.go  providers_test.go  wire.go  wire_gen.go
internal/domain/: BUILD.bazel  feature_flag.go  idempotency_record.go  models_test.go  oauth_account.go  permission.go  role.go  session.go  user.go  verification_token.go
internal/health/: BUILD.bazel  checker.go
internal/observability/: BUILD.bazel  logging.go  logging_test.go  metrics.go  metrics_test.go  redis_metrics.go  redis_metrics_test.go  runtime.go  runtime_test.go  tracing.go  tracing_test.go
internal/repository/: BUILD.bazel  feature_flag_repository.go  local_credential_repository.go  local_credential_repository_test.go  oauth_repository.go  oauth_repository_test.go  pagination.go  pagination_test.go  permission_repository.go  permission_repository_test.go  repository_test_helpers_test.go  role_repository.go  role_repository_test.go  session_repository.go  session_repository_test.go  user_repository.go  user_repository_test.go  verification_token_repository.go  verification_token_repository_test.go
internal/security/: BUILD.bazel  cookie.go  hash.go  jwt.go  jwt_test.go  state.go  state_test.go
internal/service/: BUILD.bazel  auth_abuse_guard.go  auth_abuse_guard_redis.go  auth_service.go  auth_service_test.go  email_verification_notifier.go  feature_flag_cache_store.go  feature_flag_cache_store_redis.go  feature_flag_service.go  feature_flag_service_test.go  idempotency_store.go  idempotency_store_db.go  idempotency_store_db_test.go  idempotency_store_redis.go  interfaces.go  oauth_service.go  rbac_permission_resolver.go  rbac_permission_resolver_test.go  rbac_service.go  rbac_service_test.go  session_service.go  session_service_test.go  storage_service.go  storage_service_test.go  token_service.go  token_service_test.go  user_service.go  user_service_test.go
internal/tools/common/: BUILD.bazel  env_test.go  output_test.go
internal/tools/obscheck/: BUILD.bazel  command.go  command_test.go
internal/tools/ui/: BUILD.bazel  run_test.go
k8s/: README.md  kind-config-simple.yaml  kind-config.yaml
k8s/base/: kustomization.yaml  namespace.yaml
k8s/scripts/: check-rollouts-controller.sh  cleanup.sh  deploy.sh  health-check.sh  image-build-load-kind.sh  (+8 more)
migrations/: 001_init.sql
taskfiles/: app.yaml  bazel.yaml  ci.yaml  go.yaml  k8s.yaml  obs.yaml  security.yaml
(+170 files in other folders)
