load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "database",
    srcs = [
        "migrate.go",
        "postgres.go",
        "seed.go",
    ],
    importpath = "github.com/sandeepkv93/secure-observable-go-backend-starter-kit/internal/database",
    visibility = ["//:__subpackages__"],
    deps = [
        "//internal/config",
        "//internal/domain",
        "//internal/observability",
        "@io_gorm_driver_postgres//:postgres",
        "@io_gorm_gorm//:gorm",
        "@io_gorm_gorm//logger",
    ],
)

go_test(
    name = "database_test",
    srcs = [
        "migrate_test.go",
        "postgres_test.go",
        "seed_test.go",
    ],
    embed = [":database"],
    deps = [
        "//internal/config",
        "//internal/domain",
        "@io_gorm_driver_sqlite//:sqlite",
        "@io_gorm_gorm//:gorm",
        "@io_gorm_gorm//logger",
    ],
)
