load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "domain",
    srcs = [
        "idempotency_record.go",
        "local_credential.go",
        "oauth_account.go",
        "permission.go",
        "role.go",
        "session.go",
        "user.go",
        "verification_token.go",
    ],
    importpath = "github.com/sandeepkv93/secure-observable-go-backend-starter-kit/internal/domain",
    visibility = ["//:__subpackages__"],
)
