load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "common",
    srcs = [
        "env.go",
        "output.go",
    ],
    importpath = "github.com/sandeepkv93/secure-observable-go-backend-starter-kit/internal/tools/common",
    visibility = ["//:__subpackages__"],
)

go_test(
    name = "common_test",
    srcs = [
        "env_test.go",
        "output_test.go",
    ],
    embed = [":common"],
)
