load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "ui",
    srcs = ["run.go"],
    importpath = "github.com/sandeepkv93/everything-backend-starter-kit/internal/tools/ui",
    visibility = ["//:__subpackages__"],
    deps = [
        "@com_github_charmbracelet_bubbletea//:bubbletea",
        "@com_github_charmbracelet_lipgloss//:lipgloss",
    ],
)

go_test(
    name = "ui_test",
    srcs = ["run_test.go"],
    embed = [":ui"],
)
